--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+server.port=0
 spring.application.name=EmailNotificationMicroservice
+spring.kafka.consumer.bootstrap-servers=localhost:9092,localhost:9094,localhost:9096
+spring.kafka.consumer.group-id=product-created-events
+spring.kafka.consumer.properties.spring.json.trusted.packages=io.github.mauricio_mds.core
