--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 server.port=0
 spring.application.name=EmailNotificationMicroservice
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.password=developer
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=developer
+spring.h2.console.enabled=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.kafka.consumer.bootstrap-servers=localhost:9092,localhost:9094,localhost:9096
 spring.kafka.consumer.group-id=product-created-events
 spring.kafka.consumer.properties.spring.json.trusted.packages=io.github.mauricio_mds.core
